<resources>
    <string name="app_name">MasterMind</string>
    <string name="titre">MasterMind</string>
    <string name="def">what is MasterMind??</string>
    <string name="name">"Enter your Name "</string>
    <string name="play">Start </string>
    <string name="notifErreur">"Please enter your username "</string>
    <string name="notifErreurRb">"Please choose from the option</string>
    <string name="notifRechoice">"Please choose again  its a draw</string>

    <string name="pick">Pc picked up a number Try Guessing it</string>
    <string name="stars">****</string>
    <string name="txtsurrender">if you want to surrender you\'ll view results here</string>
    <string name="btnsurrender">Surrender</string>
    <string name="btnInfo">info</string>
    <string name="correct">The Correct Result Is : </string>

    <string name="confirm">Confirm</string>
    <string name="infoDetails">-Tous les chiffres dans le nombre secret sont differents.\n -Le nombre secret ne peut pas commencer par zéro (dans les règles officielles). \n -Si dans votre proposition il y a des chiffres du nombre secret, aux bons endroits, ils sont des Taureaux. \n -Si dans votre proposition il y a des chiffres du nombre secret, mais pas aux bons endroits, ils sont des Vaches.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>